--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div id="moneyRainContainer"></div>
-	<div id="topText">YONKAN THESIS DEFENDED CONGRATULATIONS!!! VIRTUAL MONEY FOR U!</div>
+	<div id="topText">YONKAN THESIS DEFENDED AND NCMH INTERNSHIP DONE!!! CONGRATULATIONS!!! FAK NCMH! FAK ATU!!</div>
     <div class="cake" id="cake">
         <div class="plate"></div>
         <div class="layer layer-bottom"></div>
